[project]
name = "comfyui-see-through"
description = "ComfyUI nodes for See-through: Anime Layer Decomposition from a Single Image"
version = "0.2.0"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.25.0",
    "accelerate>=0.20.0",
    "opencv-python>=4.0.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-See-through"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "ComfyUI-See-through"
Icon = ""
